--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,4 @@ RewriteRule ^getall/?$ ./apis/menus/api_getall_diaryfood.php [NC,L]
 RewriteRule ^insert/?$ ./apis/menus/api_insert_diaryfood.php [NC,L] 
 RewriteRule ^update/?$ ./apis/menus/api_update_diaryfood.php [NC,L] 
 RewriteRule ^delete/?$ ./apis/menus/api_delete_diaryfood.php [NC,L] 
+RewriteRule ^checklogin/?$ ./apis/api_checklogin.php [NC,L] 
